# FTQuotes

./: .dockerignore  .gitignore  README.md  fly.toml  main.py  mylist.py  new.py  pyproject.toml  requirements.txt  test.txt
assets/: localisation.csv
src/: main.py
